--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <div class="popup"></div>
     <header>
         <nav>
             <h1>about</h1>
@@ -19,207 +20,7 @@
     <main>
         <h2>------ this website html & CSS code ------ <span><a href="index.html">👉 back to home 👈</a></span></h2>
         <section>
-            <plaintext>
-
-                <!DOCTYPE html>
-                <html lang="en">
-
-                <head>
-                    <meta charset="UTF-8">
-                    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-                    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
-                    <link rel="stylesheet" href="style.css">
-                    <title>MTSTECHTUBE | learn something new & start something new</title>
-                </head>
-
-                <body>
-                    <header>
-                        <nav>
-                            <div class="left">mtstechtube</div>
-                            <div class="right">
-                                <ul>
-                                    <li><a href="#" class="hover">home</a></li>
-                                    <li><a href="about.html" class="hover">about</a></li>
-                                    <li><a href="https://www.instagram.com/mtstechtube" target="_blank"
-                                            class="hover btn-2">instagram</a></li>
-                                    <li><a href="https://www.youtube.com/mtstechtube" target="_blank"
-                                            class="hover btn">youtube</a></li>
-                                </ul>
-                            </div>
-                        </nav>
-                    </header>
-                    <main>
-                        <section class="hero">
-                            <div class="left-1">
-                                <h2>who am i</h2>
-                                <p><span><b> muhammad tauseef siddiqui </b>.</span> i am web developer, Lorem ipsum
-                                    dolor
-                                    sit amet, consectetur adipisicing elit. Autem, optio. Repellat, rerum ea! Modi
-                                    mollitia
-                                    maiores quae quidem vero soluta?.</p>
-                                <ul class="click">
-                                    <li><a href="https://www.instagram.com/mtstechtube" target="_blank"
-                                            class="hover btn-3">instagram</a></li>
-
-                                </ul>
-                            </div>
-                            <div class="right-1">
-                                <img src="pic.png" alt="">
-                            </div>
-                        </section>
-                    </main>
-                </body>
-
-                </html>
-            </plaintext>
-        </section>
-        <hr>
-        <section>
-            <plaintext>
-                body {
-                margin: 0;
-                padding: 0;
-                background-color: rgb(4, 4, 46);
-                color: white;
-                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-                }
-
-                a {
-
-                text-decoration: none;
-                }
-
-                nav {
-                background-color: rgb(156, 156, 255);
-                height: 70px;
-                display: flex;
-                align-items: center;
-                justify-content: space-around;
-                }
-
-                ul {
-                list-style: none;
-                display: flex;
-                gap: 65px;
-                }
-
-                .left {
-                text-transform: uppercase;
-                font-weight: bolder;
-                font-size: 2rem;
-                }
-
-                a {
-                color: white;
-                font-size: 1rem;
-                text-transform: capitalize;
-                }
-
-                .btn-2 {
-                border: 3px solid white;
-                border-radius: 8px;
-                padding: 5px 16px;
-
-                }
-
-                .btn {
-                background-color: white;
-                color: rgb(46, 46, 184);
-                border: 3px solid rgb(46, 46, 184);
-                border-radius: 8px;
-                padding: 5px 16px;
-                }
-
-                a:hover {
-                color: rgb(46, 46, 184);
-                transition: 0.5 ease-in-out;
-                }
-
-                .btn-2:hover {
-                border-color: rgb(46, 46, 184);
-                background-color: white;
-                }
-
-                .btn:hover {
-                background-color: transparent;
-                border-color: white;
-                color: white;
-                }
-
-                .hero {
-                margin-top: 85px;
-                display: flex;
-                justify-content: space-around;
-                align-items: center;
-                align-content: center;
-                }
-                h2{
-                font-size: 3.8rem;
-                margin-bottom: 0;
-                }
-                p{
-                font-size: 1.3rem;
-                margin-top: 0;
-                text-transform: capitalize;
-                }
-
-                .left-1 {
-                width: 300px;
-                }
-
-                img {
-                width: 550px;
-                float: left;
-                }
-                span{
-                color: rgb(156, 156, 255) ;
-                text-transform: capitalize;
-                }
-                /* new section start */
-
-
-                .click{
-                margin-right: 20px;
-                }
-                a {
-                color: white;
-                font-size: 1rem;
-                text-transform: capitalize;
-                }
-
-                .btn-3 {
-                border: 3px solid white;
-                border-radius: 8px;
-                padding: 5px 16px;
-                margin-right: -38;
-
-                }
-
-                .btn-4 {
-                background-color: white;
-                color: rgb(46, 46, 184);
-                border: 3px solid rgb(46, 46, 184);
-                border-radius: 8px;
-                padding: 5px 16px;
-                }
-
-                a:hover {
-                color: rgb(46, 46, 184);
-                transition: 0.5 ease-in-out;
-                }
-
-                .btn-3:hover {
-                border-color: rgb(46, 46, 184);
-                background-color: white;
-                }
-
-                .btn-4:hover {
-                background-color: transparent;
-                border-color: white;
-                color: white;
-                }
-            </plaintext>
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus optio dignissimos, perspiciatis ipsa quas alias eius, hic obcaecati ab at magnam cupiditate ad ut placeat officia suscipit sequi! Ea sed vitae pariatur veritatis modi natus nesciunt fugit placeat vel nulla similique, at repellendus tenetur quaerat voluptates saepe aliquid eius aliquam sint commodi deserunt. Vero magni repellendus officia eos. Numquam sed qui voluptas excepturi nam quaerat cumque et, optio iusto eius accusamus veritatis a mollitia facilis, sapiente reiciendis natus nemo eligendi asperiores. Nulla ipsam quibusdam harum perspiciatis ducimus impedit nihil, dolorum quos, earum nisi necessitatibus quam sunt excepturi. Explicabo, laborum. Optio animi deserunt iusto qui quis. Reprehenderit architecto distinctio repellendus laudantium assumenda? Suscipit quia culpa hic enim omnis illo aliquam nulla odio atque dolorem nobis quaerat officiis saepe sed sapiente modi qui, ex cumque iure aperiam? Explicabo blanditiis placeat odit harum vel totam corrupti saepe doloribus? Nam unde nisi ex perspiciatis quasi dicta iure minus facilis. Qui, et illo ex illum laudantium eaque placeat. Aperiam at, vel impedit temporibus alias eius nisi aut quo nihil autem! Neque temporibus officia eos in quasi sequi facilis provident itaque adipisci beatae explicabo aperiam eum, quas perspiciatis ipsam accusantium vitae reprehenderit amet debitis nobis minus libero nulla maiores numquam. Corporis quas ea reiciendis, omnis modi illum iure laboriosam, ab, facere sit labore sequi. Porro dolor officia laboriosam recusandae dolores ratione exercitationem architecto sint corporis! Impedit odio sint cum accusamus? Deleniti perferendis perspiciatis veritatis soluta, vero magni inventore nesciunt veniam aspernatur minima fuga doloremque rem odit ad maxime reiciendis minus nulla neque! Sed beatae a temporibus, iure libero eum consequuntur quibusdam maxime voluptatibus repellendus tenetur porro eos! Vero deserunt ad, eius delectus excepturi voluptates minus pariatur officia modi id velit laudantium! Impedit velit at consectetur voluptatibus alias delectus repudiandae iste cumque a. Odit consectetur fugiat perferendis, aliquam laborum voluptates tempora obcaecati? Enim rem eum reprehenderit labore, autem unde voluptatibus corrupti aspernatur, sed mollitia ratione possimus explicabo eaque molestias dolore! Accusamus voluptas vel natus porro assumenda eaque accusantium, illum, quis reprehenderit corrupti ea repudiandae ad iure debitis numquam quasi mollitia perspiciatis nesciunt ab facere fugit minus nam autem doloribus! Ullam necessitatibus sapiente atque. Totam itaque porro possimus eaque esse ut quia, ab laboriosam fugiat voluptates veritatis ipsa. Accusamus voluptatem consequuntur laudantium repellendus, officia alias eos veritatis labore cupiditate adipisci, cumque fugiat quae, perferendis numquam? Saepe perferendis cum dolorum a tempore autem voluptatem deleniti similique, eligendi officia accusamus consequuntur, earum voluptatibus dolores sequi consectetur at quo quae quis omnis nemo veritatis beatae perspiciatis! Exercitationem optio quos, corrupti laboriosam tenetur odit quis facere sit? Minima esse beatae eius id eveniet similique temporibus nulla. Numquam cumque facilis delectus odit voluptatibus totam id sed incidunt voluptate! Ea nam aperiam repudiandae! Excepturi, omnis consectetur libero doloribus iusto explicabo molestias, odio adipisci alias odit cumque repudiandae ipsum nostrum atque eveniet quaerat nobis itaque ipsam. Quae possimus consequatur quidem accusamus eos, expedita iusto soluta sed consectetur officia ipsa quo! Repellat rem iusto voluptas, autem natus distinctio harum fuga maxime, ad dolor quae molestias quasi?
         </section>
     </main>
 </body>
