--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                 <ul>
                     <li><a href="#our-clint" class="hover">our clint</a></li>
                     <li><a href="about.html" class="hover">about</a></li>
-                    <li><a href="https://www.instagram.com/mtstechtube" target="_blank" class="hover btn-2">instagram</a></li>
+                    <li><a href="https://www.instagram.com/mtstechtube" target="_blank"
+                            class="hover btn-2">instagram</a></li>
                     <li><a href="https://www.youtube.com/mtstechtube" target="_blank" class="hover btn">youtube</a></li>
                 </ul>
             </div>
@@ -32,7 +33,7 @@
                     consectetur adipisicing elit. Autem, optio. Repellat, rerum ea! Modi mollitia maiores quae quidem
                     vero soluta?.</p>
                 <ul class="click">
-                    
+
                 </ul>
             </div>
             <div class="right-1">
@@ -42,7 +43,88 @@
         <hr>
         <section class="second">
             <h2 class="text" id="our-clint"> our clints</h2>
-            <p class="main">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium ea architecto illo tempora perferendis, mollitia amet tempore at eaque. Sequi, voluptate. Blanditiis facilis sed, animi quisquam incidunt nam rem iure. Reprehenderit minus labore accusantium quam accusamus nemo, magnam doloribus maiores fuga vero dicta modi consectetur voluptates odit enim optio corporis, veritatis ea et officia omnis? Hic quibusdam, quia beatae quidem pariatur odio nisi eveniet asperiores quod quam itaque. Maxime sint eum officiis dolores, dignissimos repudiandae modi nesciunt culpa nulla perspiciatis nobis, magnam quos aliquam qui, dolore magni vero quas optio beatae pariatur adipisci iure excepturi sunt. Fugit vel aliquam sed obcaecati, nobis quas, repudiandae ullam quasi, doloremque nihil illo. Similique repudiandae incidunt porro voluptatum, quis aut voluptate. Fuga totam nam voluptate quisquam nemo illo, asperiores repellat! Ut praesentium, nihil odio accusantium, itaque tenetur ab, quia assumenda deleniti fugit sunt! Nam earum ipsum hic ratione itaque veritatis doloribus consectetur? Eaque magnam, delectus asperiores eligendi architecto aliquid facere voluptates! Quasi laudantium accusantium nostrum amet incidunt eum voluptas, ad, hic dolore sit, excepturi beatae mollitia optio. Doloribus dolorem quibusdam corporis consequatur explicabo assumenda a cumque qui natus. Quod eaque ut dolor quisquam adipisci laboriosam vel minus fugit omnis voluptatem temporibus earum doloribus provident et, cumque nisi non pariatur voluptates veniam incidunt excepturi iure facilis? Ab, est incidunt veniam voluptates, nostrum totam aliquid saepe nulla possimus cum beatae velit dignissimos? Perferendis vitae doloribus voluptatem laborum rem pariatur laudantium velit magni enim non quo eaque autem neque, necessitatibus labore ut, consequatur vel impedit distinctio veniam culpa magnam. In inventore aperiam veniam alias amet, mollitia ut sequi ipsam beatae maiores suscipit quaerat magnam deserunt at ipsum optio quas atque sint quidem libero, fugit sapiente iste! Quae vero velit maxime ex, quos nam pariatur quod earum ratione odio deleniti sequi laudantium perspiciatis repellendus recusandae aut sapiente assumenda eius sed accusantium rem delectus corporis alias. Voluptates at id non mollitia excepturi officiis quae eveniet autem porro repellendus reiciendis aspernatur labore magni fugit, a quasi repellat laudantium asperiores quia. Illo dignissimos eveniet id, natus libero nesciunt nihil nulla minima repellendus itaque tempore dicta velit unde, suscipit quidem, quis ad neque exercitationem voluptate perferendis delectus qui. Fugiat molestiae eum deleniti, numquam quisquam perspiciatis debitis iusto mollitia nemo ducimus neque tenetur, accusantium, architecto sequi! Pariatur id, eius consequatur illum aperiam repudiandae natus iste, consectetur maxime tempore necessitatibus. Nesciunt ab, aliquam consequuntur ullam maiores dicta distinctio quisquam natus optio voluptates id provident dolorem blanditiis at suscipit, aspernatur labore ratione obcaecati accusantium perferendis quia molestiae earum ipsam eaque! Sunt sapiente molestiae laboriosam. Magni deserunt distinctio maiores ipsum non sunt, excepturi suscipit dolores aperiam quo assumenda perspiciatis nulla ratione quas quidem reprehenderit, accusantium laboriosam modi labore adipisci culpa odio unde saepe. Culpa doloremque velit recusandae facere pariatur voluptates quae quod aut repellat commodi mollitia totam vitae exercitationem officia et eaque, soluta sed deserunt nam incidunt aspernatur? Laudantium qui itaque cupiditate voluptas omnis reiciendis, at aut alias tempore repellat, ipsam quaerat sint. Dolores, fuga adipisci harum, illo assumenda quae velit maxime perferendis quaerat nesciunt eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis laudantium hic repellendus, maiores ipsa architecto incidunt illo vel neque, aspernatur officia laboriosam debitis iste rerum! Fuga commodi doloribus esse obcaecati delectus iste ipsam aperiam mollitia quo cum, vel optio harum adipisci minima recusandae possimus nulla quidem dolorem facere unde, saepe perferendis quae? Maiores dolorem eligendi ullam aliquid, ducimus ex dolor porro odio eum nisi, ad sint velit non amet fugiat expedita? Quis, consequatur sequi rem id voluptate consectetur fuga vitae, pariatur, quasi aspernatur eveniet facilis ipsum. Facilis aperiam enim facere quod ipsum dolorem libero adipisci, modi dolorum illum ducimus praesentium. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia sint fugit at veritatis atque consequatur fuga accusamus quisquam amet officiis! At tempore quibusdam error laborum voluptas quidem, sapiente aliquid. Consectetur consequuntur maiores fuga doloribus. Natus nostrum fugiat perferendis consequatur atque ad cupiditate error sit suscipit libero dolorem soluta quia cumque dicta, dolorum quae nulla voluptates mollitia aspernatur illum maxime recusandae velit rem. Eveniet ab reiciendis facilis assumenda atque quo eaque maiores quae soluta odit amet et consequuntur doloremque totam consectetur, sint aut facere recusandae distinctio architecto, at, molestiae odio. Nam rem saepe culpa ratione atque nobis sapiente, hic doloremque illo laudantium nostrum! At quis, sint incidunt accusamus obcaecati necessitatibus corporis impedit tenetur delectus earum dicta. Dolores doloremque quo, aspernatur asperiores optio quaerat, dignissimos nesciunt cum illo sequi error iste iusto, modi placeat doloribus atque exercitationem aliquid enim veritatis! Esse ipsum, asperiores vitae numquam reprehenderit maiores eius repellat? Dicta porro sequi commodi harum dolorem rerum nostrum saepe molestias animi, quo enim quasi explicabo voluptate ipsum cum repellat nisi neque vitae ipsa. Cumque, facilis. Officia dolor reiciendis nesciunt voluptatem, dolorum, consequatur esse nemo perferendis porro molestias earum laudantium libero rerum eveniet veniam enim placeat. Velit eius, nam facere quae quisquam autem dolorem aperiam perferendis similique molestias! Alias ipsam, sunt minus nihil illum atque! Possimus recusandae nostrum sint fuga quisquam nulla veritatis eligendi, harum asperiores ipsa rem nemo perferendis consectetur. Excepturi beatae adipisci laboriosam dignissimos iure qui quo sequi illo officia perspiciatis magnam nihil rem reiciendis recusandae quod, nulla labore? Ipsa, deserunt quidem provident ut aperiam commodi, quis minus numquam est quod qui reiciendis veritatis quaerat nostrum! Magnam ad ullam labore inventore praesentium, et repellat iusto temporibus nemo quidem eius ab officia quo veritatis sint, animi amet beatae quae neque aliquid. Hic, assumenda rerum asperiores ab fugiat quo blanditiis in, itaque id illo cumque autem magni iste illum reprehenderit sequi porro tempora quos eius possimus quaerat quod quae perferendis corporis. Enim debitis quis ullam perspiciatis consequuntur beatae maxime pariatur odit animi rerum? Ex et repellendus tempora tempore delectus similique quidem vitae, velit dicta, sint deserunt quibusdam ipsa iure inventore. Minus officiis vel, enim alias sed laudantium itaque atque provident in sunt veniam laborum facere nihil iure porro distinctio quisquam vero dolores tenetur reiciendis cumque voluptatum libero? Debitis dolor hic corporis, assumenda, totam dignissimos repudiandae facere exercitationem itaque impedit reiciendis? Aliquam fuga eaque, perspiciatis iusto error magni harum animi minima incidunt illum. Odit quidem molestiae exercitationem nulla nostrum harum laborum obcaecati, at quibusdam ullam reprehenderit. Maiores consequatur aspernatur dolorum ipsa dignissimos asperiores explicabo provident mollitia adipisci dolor animi, neque molestias accusantium distinctio velit accusamus fuga. Magni quod voluptatibus architecto expedita id illo cupiditate aperiam velit vero commodi esse quia facere magnam aut, similique blanditiis vitae laborum itaque qui voluptas quos. Dolor repellendus repudiandae et alias quos sint, recusandae neque excepturi tenetur obcaecati, animi, omnis deleniti fugiat aperiam nostrum eaque praesentium consectetur saepe quasi beatae optio quia corrupti porro? Ipsam, pariatur earum. Consectetur rem nesciunt voluptate dolores facere debitis tempora ducimus omnis corporis, sapiente quibusdam!</p>
+            <p class="main">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium ea architecto illo
+                tempora perferendis, mollitia amet tempore at eaque. Sequi, voluptate. Blanditiis facilis sed, animi
+                quisquam incidunt nam rem iure. Reprehenderit minus labore accusantium quam accusamus nemo, magnam
+                doloribus maiores fuga vero dicta modi consectetur voluptates odit enim optio corporis, veritatis ea et
+                officia omnis? Hic quibusdam, quia beatae quidem pariatur odio nisi eveniet asperiores quod quam itaque.
+                Maxime sint eum officiis dolores, dignissimos repudiandae modi nesciunt culpa nulla perspiciatis nobis,
+                magnam quos aliquam qui, dolore magni vero quas optio beatae pariatur adipisci iure excepturi sunt.
+                Fugit vel aliquam sed obcaecati, nobis quas, repudiandae ullam quasi, doloremque nihil illo. Similique
+                repudiandae incidunt porro voluptatum, quis aut voluptate. Fuga totam nam voluptate quisquam nemo illo,
+                asperiores repellat! Ut praesentium, nihil odio accusantium, itaque tenetur ab, quia assumenda deleniti
+                fugit sunt! Nam earum ipsum hic ratione itaque veritatis doloribus consectetur? Eaque magnam, delectus
+                asperiores eligendi architecto aliquid facere voluptates! Quasi laudantium accusantium nostrum amet
+                incidunt eum voluptas, ad, hic dolore sit, excepturi beatae mollitia optio. Doloribus dolorem quibusdam
+                corporis consequatur explicabo assumenda a cumque qui natus. Quod eaque ut dolor quisquam adipisci
+                laboriosam vel minus fugit omnis voluptatem temporibus earum doloribus provident et, cumque nisi non
+                pariatur voluptates veniam incidunt excepturi iure facilis? Ab, est incidunt veniam voluptates, nostrum
+                totam aliquid saepe nulla possimus cum beatae velit dignissimos? Perferendis vitae doloribus voluptatem
+                laborum rem pariatur laudantium velit magni enim non quo eaque autem neque, necessitatibus labore ut,
+                consequatur vel impedit distinctio veniam culpa magnam. In inventore aperiam veniam alias amet, mollitia
+                ut sequi ipsam beatae maiores suscipit quaerat magnam deserunt at ipsum optio quas atque sint quidem
+                libero, fugit sapiente iste! Quae vero velit maxime ex, quos nam pariatur quod earum ratione odio
+                deleniti sequi laudantium perspiciatis repellendus recusandae aut sapiente assumenda eius sed
+                accusantium rem delectus corporis alias. Voluptates at id non mollitia excepturi officiis quae eveniet
+                autem porro repellendus reiciendis aspernatur labore magni fugit, a quasi repellat laudantium asperiores
+                quia. Illo dignissimos eveniet id, natus libero nesciunt nihil nulla minima repellendus itaque tempore
+                dicta velit unde, suscipit quidem, quis ad neque exercitationem voluptate perferendis delectus qui.
+                Fugiat molestiae eum deleniti, numquam quisquam perspiciatis debitis iusto mollitia nemo ducimus neque
+                tenetur, accusantium, architecto sequi! Pariatur id, eius consequatur illum aperiam repudiandae natus
+                iste, consectetur maxime tempore necessitatibus. Nesciunt ab, aliquam consequuntur ullam maiores dicta
+                distinctio quisquam natus optio voluptates id provident dolorem blanditiis at suscipit, aspernatur
+                labore ratione obcaecati accusantium perferendis quia molestiae earum ipsam eaque! Sunt sapiente
+                molestiae laboriosam. Magni deserunt distinctio maiores ipsum non sunt, excepturi suscipit dolores
+                aperiam quo assumenda perspiciatis nulla ratione quas quidem reprehenderit, accusantium laboriosam modi
+                labore adipisci culpa odio unde saepe. Culpa doloremque velit recusandae facere pariatur voluptates quae
+                quod aut repellat commodi mollitia totam vitae exercitationem officia et eaque, soluta sed deserunt nam
+                incidunt aspernatur? Laudantium qui itaque cupiditate voluptas omnis reiciendis, at aut alias tempore
+                repellat, ipsam quaerat sint. Dolores, fuga adipisci harum, illo assumenda quae velit maxime perferendis
+                quaerat nesciunt eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis laudantium hic
+                repellendus, maiores ipsa architecto incidunt illo vel neque, aspernatur officia laboriosam debitis iste
+                rerum! Fuga commodi doloribus esse obcaecati delectus iste ipsam aperiam mollitia quo cum, vel optio
+                harum adipisci minima recusandae possimus nulla quidem dolorem facere unde, saepe perferendis quae?
+                Maiores dolorem eligendi ullam aliquid, ducimus ex dolor porro odio eum nisi, ad sint velit non amet
+                fugiat expedita? Quis, consequatur sequi rem id voluptate consectetur fuga vitae, pariatur, quasi
+                aspernatur eveniet facilis ipsum. Facilis aperiam enim facere quod ipsum dolorem libero adipisci, modi
+                dolorum illum ducimus praesentium. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Mollitia
+                sint fugit at veritatis atque consequatur fuga accusamus quisquam amet officiis! At tempore quibusdam
+                error laborum voluptas quidem, sapiente aliquid. Consectetur consequuntur maiores fuga doloribus. Natus
+                nostrum fugiat perferendis consequatur atque ad cupiditate error sit suscipit libero dolorem soluta quia
+                cumque dicta, dolorum quae nulla voluptates mollitia aspernatur illum maxime recusandae velit rem.
+                Eveniet ab reiciendis facilis assumenda atque quo eaque maiores quae soluta odit amet et consequuntur
+                doloremque totam consectetur, sint aut facere recusandae distinctio architecto, at, molestiae odio. Nam
+                rem saepe culpa ratione atque nobis sapiente, hic doloremque illo laudantium nostrum! At quis, sint
+                incidunt accusamus obcaecati necessitatibus corporis impedit tenetur delectus earum dicta. Dolores
+                doloremque quo, aspernatur asperiores optio quaerat, dignissimos nesciunt cum illo sequi error iste
+                iusto, modi placeat doloribus atque exercitationem aliquid enim veritatis! Esse ipsum, asperiores vitae
+                numquam reprehenderit maiores eius repellat? Dicta porro sequi commodi harum dolorem rerum nostrum saepe
+                molestias animi, quo enim quasi explicabo voluptate ipsum cum repellat nisi neque vitae ipsa. Cumque,
+                facilis. Officia dolor reiciendis nesciunt voluptatem, dolorum, consequatur esse nemo perferendis porro
+                molestias earum laudantium libero rerum eveniet veniam enim placeat. Velit eius, nam facere quae
+                quisquam autem dolorem aperiam perferendis similique molestias! Alias ipsam, sunt minus nihil illum
+                atque! Possimus recusandae nostrum sint fuga quisquam nulla veritatis eligendi, harum asperiores ipsa
+                rem nemo perferendis consectetur. Excepturi beatae adipisci laboriosam dignissimos iure qui quo sequi
+                illo officia perspiciatis magnam nihil rem reiciendis recusandae quod, nulla labore? Ipsa, deserunt
+                quidem provident ut aperiam commodi, quis minus numquam est quod qui reiciendis veritatis quaerat
+                nostrum! Magnam ad ullam labore inventore praesentium, et repellat iusto temporibus nemo quidem eius ab
+                officia quo veritatis sint, animi amet beatae quae neque aliquid. Hic, assumenda rerum asperiores ab
+                fugiat quo blanditiis in, itaque id illo cumque autem magni iste illum reprehenderit sequi porro tempora
+                quos eius possimus quaerat quod quae perferendis corporis. Enim debitis quis ullam perspiciatis
+                consequuntur beatae maxime pariatur odit animi rerum? Ex et repellendus tempora tempore delectus
+                similique quidem vitae, velit dicta, sint deserunt quibusdam ipsa iure inventore. Minus officiis vel,
+                enim alias sed laudantium itaque atque provident in sunt veniam laborum facere nihil iure porro
+                distinctio quisquam vero dolores tenetur reiciendis cumque voluptatum libero? Debitis dolor hic
+                corporis, assumenda, totam dignissimos repudiandae facere exercitationem itaque impedit reiciendis?
+                Aliquam fuga eaque, perspiciatis iusto error magni harum animi minima incidunt illum. Odit quidem
+                molestiae exercitationem nulla nostrum harum laborum obcaecati, at quibusdam ullam reprehenderit.
+                Maiores consequatur aspernatur dolorum ipsa dignissimos asperiores explicabo provident mollitia adipisci
+                dolor animi, neque molestias accusantium distinctio velit accusamus fuga. Magni quod voluptatibus
+                architecto expedita id illo cupiditate aperiam velit vero commodi esse quia facere magnam aut, similique
+                blanditiis vitae laborum itaque qui voluptas quos. Dolor repellendus repudiandae et alias quos sint,
+                recusandae neque excepturi tenetur obcaecati, animi, omnis deleniti fugiat aperiam nostrum eaque
+                praesentium consectetur saepe quasi beatae optio quia corrupti porro? Ipsam, pariatur earum. Consectetur
+                rem nesciunt voluptate dolores facere debitis tempora ducimus omnis corporis, sapiente quibusdam!</p>
         </section>
     </main>
 </body>
