--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@
                 rem nesciunt voluptate dolores facere debitis tempora ducimus omnis corporis, sapiente quibusdam!</p>
         </section>
     </main>
+    <footer>
+        <div class="copyright">
+            Made with <span id="heart"> ❤ </span>by <a href="#" id="impo">MTSTECHTUBE</a> 
+        </div>
+    </footer>
        <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script>
         var typed = new Typed('#element', {
