--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>MTSTECHTUBE | learn something new & start something new</title>
 </head>
@@ -33,7 +33,7 @@
                 <div><span class="bolder" id="element"></span></div>
                 
             </div>
-            <div class="right-1">
+            <div class="right-1"> 
                 <img src="pic.png" alt="">
             </div>
         </section>
